# ffmpeg-study

./: .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindAVCODEC.cmake  FindAVFORMAT.cmake  FindAVUTIL.cmake  FindSWRESAMPLE.cmake  FindSWSCALE.cmake  TestStrerrorR.cmake  test_strerror_r.c
enm4a/: CMakeLists.txt  ENM4A_VERSION.cmake  enm4a.c  enm4a.h  enm4a.rc.in  enm4a_config.h.in  enm4a_http_header.c  enm4a_http_header.h  enm4a_version.h.in  main.cpp
ffconcat/: CMakeLists.txt  ffconcat.cpp  ffconcat.h  ffconcat_config.h.in  main.cpp
rssbotlib/: CMakeLists.txt  RSSBOTLIB_VERSION.cmake  _avutil_dict.h  _rssbotlib.pyi  _rssbotlib.pyx  avcodec.pxd  avformat.pxd  avutil.pxd  gen.py  rssbotlib.rc.in  rssbotlib_config.h.in  tg_image_compress.c  tg_image_compress.h  tg_image_compress.pxd  tg_thumbnail.c  tg_thumbnail.h  tg_thumbnail.pxd  ugoira.c  ugoira.h  ugoira.pxd  utils.c  utils.h  videoinfo.c  videoinfo.h  videoinfo.pxd  warp.c  warp.h  warp.pxd  zipfile.c  zipfile.h
utils/: CMakeLists.txt  cfileop.cpp  cfileop.h  cmath.c  cmath.h  cpp2c.cpp  cpp2c.h  cstr_util.c  cstr_util.h  err.cpp  err.h  fileop.cpp  fileop.h  list_pointer.h  memfile.c  memfile.h  utils_config.h.in  wchar_util.cpp  wchar_util.h
